tests/compiler/errors/global_at_top_level.casa
# expect: INVALID_SCOPE
0 = X
global X
